@startuml
hide empty methods
hide empty fields
class "AudioTask" {
    +content : MediaTaskType
    +finishDate : FinishDate
    +id : string
    +owner : ITaskOwner | null
    +status : ETaskStatus
    +pause() : void
    +play() : void
    +stop() : void
    +toggle() : void
}
class "PeriodTask" {
    +content : T
    +finishDate : FinishDate
    +id : string
    +owner : ITaskOwner | null
    +status : ETaskStatus
    +toggle() : void
}
"PeriodTask" <|-- "AudioTask"
interface "IPlayable" {
    +pause() : void
    +play() : void
    +stop() : void
}
"IPlayable" <|.. "AudioTask"
@enduml